--- a/js/index.html
+++ b/js/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="todo-container">
         <header>
-            <h1>Se leu é corno</h1>
+            <h1>To-do List</h1>
         </header>
         <form id="todo-form">
             <h4>Adicione sua tarefa:</h4>
